Add gem: shorturl, add message fields to text_job, create text_job in job#create, custom link to text_job#show which sets click=>true

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ SECRET_KEY_BASE_DEV=secret_key_base_dev
 
 SECRET_KEY_BASE_TEST=secret_key_base_test
 
+DOMAIN=domain
+
 TWILIO_ACCOUNT_SID=twilio_account_sid
 
 TWILIO_AUTH_TOKEN=twilio_auth_token
